--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-app",
-  "version": "1.5.1",
+  "version": "1.6.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "eslint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "db:seed": "npx tsx prisma/seed.ts",
+    "db:studio": "npx prisma studio",
+    "db:migrate": "npx prisma migrate dev"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.87.4",
@@ -19,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@prisma/client": "^6.16.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
@@ -30,6 +34,8 @@
     "eslint-config-next": "15.5.3",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
+    "prisma": "^6.16.1",
+    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
