--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "eslint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "db:seed": "npx tsx prisma/seed.ts",
-    "db:studio": "npx prisma studio",
-    "db:migrate": "npx prisma migrate dev"
+    "db:seed": "npx tsx src/lib/seed.ts"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.87.4",
@@ -22,7 +20,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@prisma/client": "^6.16.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
@@ -34,7 +31,8 @@
     "eslint-config-next": "15.5.3",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
-    "prisma": "^6.16.1",
+    "mongodb": "^6.0.0",
+    "mongoose": "^8.0.0",
     "tsx": "^4.20.5",
     "typescript": "^5"
   }
